# kaggle-bfrb-detection

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  README.md  compose.yml  copier.yml  pyproject.toml
.claude/: settings.local.json
.claude/commands/: reflection.md  remind.md
.devcontainer/: Dockerfile  devcontainer.json  ssh-setup.sh
.gemini/: settings.json
.github/ISSUE_TEMPLATE/: experiment.md
.github/PULL_REQUEST_TEMPLATE/: experiment_results.md
data/: README.md
docs/claude/: gemini-tool-selection.md  gemini-troubleshooting.md  gemini-workflows.md
docs/gemini/: code-review-request.md  gemini-templates.md  investigation-request.md  result-review-request.md
models/: README.md
notebooks/: 01_data_exploration.ipynb  02_full_dataset_analysis.ipynb  02_model_training.ipynb
results/: README.md
scripts/: README.md  advanced_feature_experiment.py  benchmark_comparison.py  convert_data_to_parquet.py  create_baseline.py  create_quick_baseline.py  feature_engineering_experiment.py  project_summary.py  setup_kaggle.py  train_full_dataset.py  train_full_dataset_quick.py
src/bfrb/: __init__.py  data_processing.py  evaluation.py  features_advanced.py  kaggle_utils.py  main.py  models.py
submissions/: README.md
tests/: __init__.py  test_main.py
